Add quotes to blacklisted items.

--- a/config/dictionary.yml
+++ b/config/dictionary.yml
@@ -1,365 +1,365 @@
 # the filter currently checks for words that are 3 or more characters.
 ---
-assfuck: **ssf*ck*
-assfucker: **ssf*ck*r*
-assmonkey: **ssm*nk*y*
-assmunch: **ssm*nch*
-assmuncher: **ssm*nch*r*
-asspacker: **ssp*ck*r*
-asspuppies: **ssp*pp**s*
-assranger: **ssr*ng*r*
-bumblefuck: *b*mbl*f*ck*
-bumfuck: *b*mf*ck*
-cameljockey: *c*m*lj*ck*y*
-carpetmuncher: *c*rp*tm*nch*r*
-clogwog: *cl*gw*g*
-cockcowboy: *c*ckc*wb*y*
-cockknob: *c*ckkn*b*
-cocklicker: *c*ckl*ck*r*
-cocklover: *c*ckl*v*r*
-cocknob: *c*ckn*b*
-cockqueen: *c*ckq***n*
-cockrider: *c*ckr*d*r*
-cocksman: *c*cksm*n*
-cocksmith: *c*cksm*th*
-cocksmoker: *c*cksm*k*r*
-cocksucer: *c*cks*c*r*
-cocksuck: *c*cks*ck*
-cocksucked: *c*cks*ck*d*
-cocksucker: *c*cks*ck*r*
-cock-sucker: *c*ck-s*ck*r*
-cock-sucker: *c*ck-s*ck*r*
-cocksuckers: *c*cks*ck*rs*
-cock-suckers: *c*ck-s*ck*rs*
-cocksucking: *c*cks*ck*ng*
-cock-sucking: *c*ck-s*ck*ng*
-coolie: *c**l***
-cornhole: *c*rnh*l**
-crotchjockey: *cr*tchj*ck*y*
-cumjockey: *c*mj*ck*y*
-cumquat: *c*mq**t*
-cumqueen: *c*mq***n*
-cumshot: *c*msh*t*
-comeshot: *c*msh*t*
-cunnilingus: *c*nn*l*ng*s*
-cunntt: *c*nntt*
-cunt: *c*nt*
-cuntfuck: *c*ntf*ck*
-cuntfucker: *c*ntf*ck*r*
-cuntlick: *c*ntl*ck*
-cuntlicker: *c*ntl*ck*r*
-cuntlicking: *c*ntl*ck*ng*
-cunts: *c*nts*
-cuntsucker: *c*nts*ck*r*
-darkie: *d*rk***
-darky: *d*rky*
-datnigga: *d*tn*gg**
-dicklick: *d*ckl*ck*
-dicklicker: *d*ckl*ck*r*
-dripdick: *dr*pd*ck*
-dumbfuck: *d*mbf*ck*
-facefucker: *f*c*f*ck*r*
-fannyfucker: *f*nnyf*ck*r*
-fastfuck: *f*stf*ck*
-fatfuck: *f*tf*ck*
-fatfucker: *f*tf*ck*r*
-fckcum: *fckc*m*
-felch: *f*lch*
-felcher: *f*lch*r*
-felching: *f*lch*ng*
-feltch: *f*ltch*
-feltched: *f*ltch*d*
-feltcher: *f*ltch*r*
-feltcher: *f*ltch*r*
-feltchers: *f*ltch*rs*
-feltches: *f*ltch*s*
-feltching: *f*ltch*ng*
-feltching: *f*ltch*ng*
-fingerfuck: *f*ng*rf*ck*
-fingerfucked: *f*ng*rf*ck*d*
-fingerfucker: *f*ng*rf*ck*r*
-fingerfuckers: *f*ng*rf*ck*rs*
-fingerfucking: *f*ng*rf*ck*ng*
-fistfuck: *f*stf*ck*
-fistfucked: *f*stf*ck*d*
-fistfucker: *f*stf*ck*r*
-fistfucking: *f*stf*ck*ng*
-footfuck: *f**tf*ck*
-footfucker: *f**tf*ck*r*
-freakfuck: *fr**kf*ck*
-freakyfucker: *fr**kyf*ck*r*
-freefuck: *fr**f*ck*
-fuckbag: *f*ckb*g*
-fuckbuddy: *f*ckb*ddy*
-fucked: *f*ck*d*
-fucked: *f*ck*d*
-fuckedup: *f*ck*d*p*
-fucker: *f*ck*r*
-fuckers: *f*ck*rs*
-fuckface: *f*ckf*c**
-fuckfest: *f*ckf*st*
-fuckfreak: *f*ckfr**k*
-fuckfriend: *f*ckfr**nd*
-fuckhead: *f*ckh**d*
-fuckher: *f*ckh*r*
-fuckina: *f*ck*n**
-fuckingbitch: *f*ck*ngb*tch*
-fuckknob: *f*ckkn*b*
-fuckme: *f*ckm**
-fuckmehard: *f*ckm*h*rd*
-fuckmonkey: *f*ckm*nk*y*
-fuckoff: *f*ck*ff*
-fuckpig: *f*ckp*g*
-fucks: *f*cks*
-fucktard: *f*ckt*rd*
-fuckwhore: *f*ckwh*r**
-fuckyou: *f*cky***
-fudgepacker: *f*dg*p*ck*r*
-goddamnmuthafucker: *g*dd*mnm*th*f*ck*r*
-goldenshower: *g*ld*nsh*w*r*
-handjob: *h*ndj*b*
-headfuck: *h**df*ck*
-heeb: *h**b*
-hindoo: *h*nd***
-holestuffer: *h*l*st*ff*r*
+assfuck: "**ssf*ck*"
+assfucker: "**ssf*ck*r*"
+assmonkey: "**ssm*nk*y*"
+assmunch: "**ssm*nch*"
+assmuncher: "**ssm*nch*r*"
+asspacker: "**ssp*ck*r*"
+asspuppies: "**ssp*pp**s*"
+assranger: "**ssr*ng*r*"
+bumblefuck: "*b*mbl*f*ck*"
+bumfuck: "*b*mf*ck*"
+cameljockey: "*c*m*lj*ck*y*"
+carpetmuncher: "*c*rp*tm*nch*r*"
+clogwog: "*cl*gw*g*"
+cockcowboy: "*c*ckc*wb*y*"
+cockknob: "*c*ckkn*b*"
+cocklicker: "*c*ckl*ck*r*"
+cocklover: "*c*ckl*v*r*"
+cocknob: "*c*ckn*b*"
+cockqueen: "*c*ckq***n*"
+cockrider: "*c*ckr*d*r*"
+cocksman: "*c*cksm*n*"
+cocksmith: "*c*cksm*th*"
+cocksmoker: "*c*cksm*k*r*"
+cocksucer: "*c*cks*c*r*"
+cocksuck: "*c*cks*ck*"
+cocksucked: "*c*cks*ck*d*"
+cocksucker: "*c*cks*ck*r*"
+cock-sucker: "*c*ck-s*ck*r*"
+cock-sucker: "*c*ck-s*ck*r*"
+cocksuckers: "*c*cks*ck*rs*"
+cock-suckers: "*c*ck-s*ck*rs*"
+cocksucking: "*c*cks*ck*ng*"
+cock-sucking: "*c*ck-s*ck*ng*"
+coolie: "*c**l***"
+cornhole: "*c*rnh*l**"
+crotchjockey: "*cr*tchj*ck*y*"
+cumjockey: "*c*mj*ck*y*"
+cumquat: "*c*mq**t*"
+cumqueen: "*c*mq***n*"
+cumshot: "*c*msh*t*"
+comeshot: "*c*msh*t*"
+cunnilingus: "*c*nn*l*ng*s*"
+cunntt: "*c*nntt*"
+cunt: "*c*nt*"
+cuntfuck: "*c*ntf*ck*"
+cuntfucker: "*c*ntf*ck*r*"
+cuntlick: "*c*ntl*ck*"
+cuntlicker: "*c*ntl*ck*r*"
+cuntlicking: "*c*ntl*ck*ng*"
+cunts: "*c*nts*"
+cuntsucker: "*c*nts*ck*r*"
+darkie: "*d*rk***"
+darky: "*d*rky*"
+datnigga: "*d*tn*gg**"
+dicklick: "*d*ckl*ck*"
+dicklicker: "*d*ckl*ck*r*"
+dripdick: "*dr*pd*ck*"
+dumbfuck: "*d*mbf*ck*"
+facefucker: "*f*c*f*ck*r*"
+fannyfucker: "*f*nnyf*ck*r*"
+fastfuck: "*f*stf*ck*"
+fatfuck: "*f*tf*ck*"
+fatfucker: "*f*tf*ck*r*"
+fckcum: "*fckc*m*"
+felch: "*f*lch*"
+felcher: "*f*lch*r*"
+felching: "*f*lch*ng*"
+feltch: "*f*ltch*"
+feltched: "*f*ltch*d*"
+feltcher: "*f*ltch*r*"
+feltcher: "*f*ltch*r*"
+feltchers: "*f*ltch*rs*"
+feltches: "*f*ltch*s*"
+feltching: "*f*ltch*ng*"
+feltching: "*f*ltch*ng*"
+fingerfuck: "*f*ng*rf*ck*"
+fingerfucked: "*f*ng*rf*ck*d*"
+fingerfucker: "*f*ng*rf*ck*r*"
+fingerfuckers: "*f*ng*rf*ck*rs*"
+fingerfucking: "*f*ng*rf*ck*ng*"
+fistfuck: "*f*stf*ck*"
+fistfucked: "*f*stf*ck*d*"
+fistfucker: "*f*stf*ck*r*"
+fistfucking: "*f*stf*ck*ng*"
+footfuck: "*f**tf*ck*"
+footfucker: "*f**tf*ck*r*"
+freakfuck: "*fr**kf*ck*"
+freakyfucker: "*fr**kyf*ck*r*"
+freefuck: "*fr**f*ck*"
+fuckbag: "*f*ckb*g*"
+fuckbuddy: "*f*ckb*ddy*"
+fucked: "*f*ck*d*"
+fucked: "*f*ck*d*"
+fuckedup: "*f*ck*d*p*"
+fucker: "*f*ck*r*"
+fuckers: "*f*ck*rs*"
+fuckface: "*f*ckf*c**"
+fuckfest: "*f*ckf*st*"
+fuckfreak: "*f*ckfr**k*"
+fuckfriend: "*f*ckfr**nd*"
+fuckhead: "*f*ckh**d*"
+fuckher: "*f*ckh*r*"
+fuckina: "*f*ck*n**"
+fuckingbitch: "*f*ck*ngb*tch*"
+fuckknob: "*f*ckkn*b*"
+fuckme: "*f*ckm**"
+fuckmehard: "*f*ckm*h*rd*"
+fuckmonkey: "*f*ckm*nk*y*"
+fuckoff: "*f*ck*ff*"
+fuckpig: "*f*ckp*g*"
+fucks: "*f*cks*"
+fucktard: "*f*ckt*rd*"
+fuckwhore: "*f*ckwh*r**"
+fuckyou: "*f*cky***"
+fudgepacker: "*f*dg*p*ck*r*"
+goddamnmuthafucker: "*g*dd*mnm*th*f*ck*r*"
+goldenshower: "*g*ld*nsh*w*r*"
+handjob: "*h*ndj*b*"
+headfuck: "*h**df*ck*"
+heeb: "*h**b*"
+hindoo: "*h*nd***"
+holestuffer: "*h*l*st*ff*r*"
 holocaust:  *h*l*c**st*
-hosejob: *h*s*j*b*
-hymie: *hym***
-iblowu: **bl*w**
-intheass: **nth**ss*
-japcrap: *j*pcr*p*
-jigaboo: *j*g*b***
-jiggabo: *j*gg*b**
-jijjiboo: *j*jj*b***
-jimfish: *j*mf*sh*
-jim fish: *j*m f*sh*
-junglebunny: *j*ngl*b*nny*
-jungle bunny: *j*ngl* b*nny*
-kaffer: *k*ff*r*
-kaffir: *k*ff*r*
-kaffre: *k*ffr**
-kafir: *k*f*r*
-kanake: *k*n*k**
-kigger: *k*gg*r*
-kike: *k*k**
-kock: *k*ck*
-koon: *k**n*
-kraut: *kr**t*
-kum: *k*m*
-kumbubble: *k*mb*bbl**
-kumbullbe: *k*mb*llb**
-kummer: *k*mm*r*
-kumming: *k*mm*ng*
-kums: *k*ms*
-kunilingus: *k*n*l*ng*s*
-kunnilingus: *k*nn*l*ng*s*
-kunt: *k*nt*
-kyke: *kyk**
-lesbo: *l*sb**
-lez: *l*z*
-lezbe: *l*zb**
-lezbefriends: *l*zb*fr**nds*
-lezbo: *l*zb**
-lezz: *l*zz*
-lezzo: *l*zz**
-limey: *l*m*y*
-limpdick: *l*mpd*ck*
-lovejuice: *l*v*j**c**
-lovemuscle: *l*v*m*scl**
-luckycameltoe: *l*ckyc*m*lt***
-mocky: *m*cky*
-moky: *m*ky*
-mothafuck: *m*th*f*ck*
-mothafucka: *m*th*f*ck**
-mothafuckaz: *m*th*f*ck*z*
-mothafucked: *m*th*f*ck*d*
-mothafucker: *m*th*f*ck*r*
-mothafuckin: *m*th*f*ck*n*
-mothafucking: *m*th*f*ck*ng*
-mothafuckings: *m*th*f*ck*ngs*
-motherfucked: *m*th*rf*ck*d*
-motherfucker: *m*th*rf*ck*r*
-mother-fucker: *m*th*r-f*ck*r*
-motherfuckers: *m*th*rf*ck*rs*
-mother-fuckers: *m*th*r-f*ck*rs*
-motherfuckin: *m*th*rf*ck*n*
-motherfucking: *m*th*rf*ck*ng*
-motherfucking: *m*th*rf*ck*ng*
-mother-fucking: *m*th*r-f*ck*ng*
-motherfuckings: *m*th*rf*ck*ngs*
-mufflicker: *m*ffl*ck*r*
-muff licker: *m*ff l*ck*r*
-mufflikcer: *m*ffl*kc*r*
-mulatto: *m*l*tt**
-muncher: *m*nch*r*
-munt: *m*nt*
-muthafucka: *m*th*f*ck**
-muthafucka: *m*th*f*ck**
-muthafucka: *m*th*f*ck**
-mutha-fucka: *m*th*-f*ck**
-mutha-fucka: *m*th*-f*ck**
-mutha-fucka: *m*th*-f*ck**
-muthafucker: *m*th*f*ck*r*
-mutha-fucker: *m*th*-f*ck*r*
-muthafuckers: *m*th*f*ck*rs*
-mutha-fuckers: *m*th*-f*ck*rs*
-muthafucking: *m*th*f*ck*ng*
-mutha-fucking: *m*th*-f*ck*ng*
-mutherfucker: *m*th*rf*ck*r*
-muther-fucker: *m*th*r-f*ck*r*
-mutherfuckers: *m*th*rf*ck*rs*
-muther-fuckers: *m*th*r-f*ck*rs*
-mutherfucking: *m*th*rf*ck*ng*
-muther-fucking: *m*th*r-f*ck*ng*
-nastyho: *n*styh**
-nastyslut: *n*stysl*t*
-nastywhore: *n*stywh*r**
-nigga: *n*gg**
-niggah: *n*gg*h*
-niggards: *n*gg*rds*
-niggard's: *n*gg*rd's*
-niggaz: *n*gg*z*
-nigger: *n*gg*r*
-niggerhead: *n*gg*rh**d*
-niggerhole: *n*gg*rh*l**
-niggers: *n*gg*rs*
-nigger's: *n*gg*r's*
-niggor: *n*gg*r*
-nigguh: *n*gg*h*
-niggur: *n*gg*r*
-niglet: *n*gl*t*
-nignog: *n*gn*g*
-nigr: *n*gr*
-nigra: *n*gr**
-nofuckingway: *n*f*ck*ngw*y*
-nutfucker: *n*tf*ck*r*
-ontherag: **nth*r*g*
-payo: *p*y**
-pearlnecklace: *p**rln*ckl*c**
-peckerwood: *p*ck*rw**d*
-phuq: *ph*q*
-picaninny: *p*c*n*nny*
-piccaninny: *p*cc*n*nny*
-pickaninny: *p*ck*n*nny*
-piker: *p*k*r*
-pikey: *p*k*y*
-piky: *p*ky*
-pindick: *p*nd*ck*
-pocha: *p*ch**
-pocho: *p*ch**
-pocketpool: *p*ck*tp**l*
-pocket pull: *p*ck*t p*ll*
-pohm: *p*hm*
-pom: *p*m*
-pommie: *p*mm***
-pommy: *p*mmy*
-poon: *p**n*
-poontang: *p**nt*ng*
-porchmonkey: *p*rchm*nk*y*
-pud: *p*d*
-pudboy: *p*db*y*
-pudd: *p*dd*
-puddboy: *p*ddb*y*
-puntang: *p*nt*ng*
-pussy_ass: *p*ssy_*ss*
-pussy-ass: *p*ssy-*ss*
-pussyeater: *p*ssy**t*r*
-pussyfucker: *p*ssyf*ck*r*
-pussylicker: *p*ssyl*ck*r*
-pussylips: *p*ssyl*ps*
-pussylover: *p*ssyl*v*r*
-pussypounder: *p*ssyp**nd*r*
-pusy: *p*sy*
-quashie: *q**sh***
-queef: *q***f*
-raghead: *r*gh**d*
-reestie: *r**st***
-rentafuck: *r*nt*f*ck*
-rimjob: *r*mj*b*
-roundeye: *r**nd*y**
-russki: *r*ssk**
-russkie: *r*ssk***
-sadis: *s*d*s*
-sadom: *s*d*m*
-sandnigger: *s*ndn*gg*r*
-shitface: *sh*tf*c**
-shitfuck: *sh*tf*ck*
-shitfucker: *sh*tf*ck*r*
-shitfull: *sh*tf*ll*
-shortfuck: *sh*rtf*ck*
-sixtynine: *s*xtyn*n**
-sixtyniner: *s*xtyn*n*r*
-skankbitch: *sk*nkb*tch*
-skankfuck: *sk*nkf*ck*
-skankybitch: *sk*nkyb*tch*
-skankywhore: *sk*nkywh*r**
-slopehead: *sl*p*h**d*
-slutting: *sl*tt*ng*
-slutwear: *sl*tw**r*
-slutwhore: *sl*twh*r**
-smackthemonkey: *sm*ckth*m*nk*y*
-snatch: *sn*tch*
-snatchpatch: *sn*tchp*tch*
-snigger: *sn*gg*r*
-sniggered: *sn*gg*r*d*
-sniggering: *sn*gg*r*ng*
-sniggers: *sn*gg*rs*
-snigger's: *sn*gg*r's*
-snowback: *sn*wb*ck*
-snownigger: *sn*wn*gg*r*
-sodomise: *s*d*m*s**
-sodomite: *s*d*m*t**
-sodomize: *s*d*m*z**
-sodomy: *s*d*my*
-sooty: *s**ty*
-spaghettinigger: *sp*gh*tt*n*gg*r*
-spankthemonkey: *sp*nkth*m*nk*y*
-spermhearder: *sp*rmh**rd*r*
-spermherder: *sp*rmh*rd*r*
-spic: *sp*c*
-spick: *sp*ck*
-spig: *sp*g*
-spigotty: *sp*g*tty*
-spik: *sp*k*
-splittail: *spl*tt**l*
-spooge: *sp**g**
-strapon: *str*p*n*
-stupidfuck: *st*p*df*ck*
-stupidfucker: *st*p*df*ck*r*
-suckcock: *s*ckc*ck*
-suck-cock: *s*ck-c*ck*
-suckdick: *s*ckd*ck*
-suckmyass: *s*ckmy*ss*
-suckmycock: *s*ckmyc*ck*
-suck-my-cock: *s*ck-my-c*ck*
-suckmydick: *s*ckmyd*ck*
-suckmytit: *s*ckmyt*t*
-taff: *t*ff*
-tang: *t*ng*
-tarbaby: *t*rb*by*
-tard: *t*rd*
-hicklips: *h*ckl*ps*
-timbernigger: *t*mb*rn*gg*r*
-titfuck: *t*tf*ck*
-titfucker: *t*tf*ck*r*
-titfuckin: *t*tf*ck*n*
-titjob: *t*tj*b*
-titlicker: *t*tl*ck*r*
-titlover: *t*tl*v*r*
-towelhead: *t*w*lh**d*
-trisexual: *tr*s*x**l*
-twat: *tw*t*
-twat: *tw*t*
-twats: *tw*ts*
-unfuckable: **nf*ck*bl**
-uptheass: **pth**ss*
-upthebutt: **pth*b*tt*
-wab: *w*b*
-whigger: *wh*gg*r*
-whitenigger: *wh*t*n*gg*r*
-whop: *wh*p*
-whorefucker: *wh*r*f*ck*r*
-wigger: *w*gg*r*
-wop: *w*p*
-zigabo: *z*g*b**
-zipperhead: *z*pp*rh**d*
+hosejob: "*h*s*j*b*"
+hymie: "*hym***"
+iblowu: "**bl*w**"
+intheass: "**nth**ss*"
+japcrap: "*j*pcr*p*"
+jigaboo: "*j*g*b***"
+jiggabo: "*j*gg*b**"
+jijjiboo: "*j*jj*b***"
+jimfish: "*j*mf*sh*"
+jim fish: "*j*m f*sh*"
+junglebunny: "*j*ngl*b*nny*"
+jungle bunny: "*j*ngl* b*nny*"
+kaffer: "*k*ff*r*"
+kaffir: "*k*ff*r*"
+kaffre: "*k*ffr**"
+kafir: "*k*f*r*"
+kanake: "*k*n*k**"
+kigger: "*k*gg*r*"
+kike: "*k*k**"
+kock: "*k*ck*"
+koon: "*k**n*"
+kraut: "*kr**t*"
+kum: "*k*m*"
+kumbubble: "*k*mb*bbl**"
+kumbullbe: "*k*mb*llb**"
+kummer: "*k*mm*r*"
+kumming: "*k*mm*ng*"
+kums: "*k*ms*"
+kunilingus: "*k*n*l*ng*s*"
+kunnilingus: "*k*nn*l*ng*s*"
+kunt: "*k*nt*"
+kyke: "*kyk**"
+lesbo: "*l*sb**"
+lez: "*l*z*"
+lezbe: "*l*zb**"
+lezbefriends: "*l*zb*fr**nds*"
+lezbo: "*l*zb**"
+lezz: "*l*zz*"
+lezzo: "*l*zz**"
+limey: "*l*m*y*"
+limpdick: "*l*mpd*ck*"
+lovejuice: "*l*v*j**c**"
+lovemuscle: "*l*v*m*scl**"
+luckycameltoe: "*l*ckyc*m*lt***"
+mocky: "*m*cky*"
+moky: "*m*ky*"
+mothafuck: "*m*th*f*ck*"
+mothafucka: "*m*th*f*ck**"
+mothafuckaz: "*m*th*f*ck*z*"
+mothafucked: "*m*th*f*ck*d*"
+mothafucker: "*m*th*f*ck*r*"
+mothafuckin: "*m*th*f*ck*n*"
+mothafucking: "*m*th*f*ck*ng*"
+mothafuckings: "*m*th*f*ck*ngs*"
+motherfucked: "*m*th*rf*ck*d*"
+motherfucker: "*m*th*rf*ck*r*"
+mother-fucker: "*m*th*r-f*ck*r*"
+motherfuckers: "*m*th*rf*ck*rs*"
+mother-fuckers: "*m*th*r-f*ck*rs*"
+motherfuckin: "*m*th*rf*ck*n*"
+motherfucking: "*m*th*rf*ck*ng*"
+motherfucking: "*m*th*rf*ck*ng*"
+mother-fucking: "*m*th*r-f*ck*ng*"
+motherfuckings: "*m*th*rf*ck*ngs*"
+mufflicker: "*m*ffl*ck*r*"
+muff licker: "*m*ff" l*ck*r*
+mufflikcer: "*m*ffl*kc*r*"
+mulatto: "*m*l*tt**"
+muncher: "*m*nch*r*"
+munt: "*m*nt*"
+muthafucka: "*m*th*f*ck**"
+muthafucka: "*m*th*f*ck**"
+muthafucka: "*m*th*f*ck**"
+mutha-fucka: "*m*th*-f*ck**"
+mutha-fucka: "*m*th*-f*ck**"
+mutha-fucka: "*m*th*-f*ck**"
+muthafucker: "*m*th*f*ck*r*"
+mutha-fucker: "*m*th*-f*ck*r*"
+muthafuckers: "*m*th*f*ck*rs*"
+mutha-fuckers: "*m*th*-f*ck*rs*"
+muthafucking: "*m*th*f*ck*ng*"
+mutha-fucking: "*m*th*-f*ck*ng*"
+mutherfucker: "*m*th*rf*ck*r*"
+muther-fucker: "*m*th*r-f*ck*r*"
+mutherfuckers: "*m*th*rf*ck*rs*"
+muther-fuckers: "*m*th*r-f*ck*rs*"
+mutherfucking: "*m*th*rf*ck*ng*"
+muther-fucking: "*m*th*r-f*ck*ng*"
+nastyho: "*n*styh**"
+nastyslut: "*n*stysl*t*"
+nastywhore: "*n*stywh*r**"
+nigga: "*n*gg**"
+niggah: "*n*gg*h*"
+niggards: "*n*gg*rds*"
+niggard's: "*n*gg*rd's*"
+niggaz: "*n*gg*z*"
+nigger: "*n*gg*r*"
+niggerhead: "*n*gg*rh**d*"
+niggerhole: "*n*gg*rh*l**"
+niggers: "*n*gg*rs*"
+nigger's: "*n*gg*r's*"
+niggor: "*n*gg*r*"
+nigguh: "*n*gg*h*"
+niggur: "*n*gg*r*"
+niglet: "*n*gl*t*"
+nignog: "*n*gn*g*"
+nigr: "*n*gr*"
+nigra: "*n*gr**"
+nofuckingway: "*n*f*ck*ngw*y*"
+nutfucker: "*n*tf*ck*r*"
+ontherag: "**nth*r*g*"
+payo: "*p*y**"
+pearlnecklace: "*p**rln*ckl*c**"
+peckerwood: "*p*ck*rw**d*"
+phuq: "*ph*q*"
+picaninny: "*p*c*n*nny*"
+piccaninny: "*p*cc*n*nny*"
+pickaninny: "*p*ck*n*nny*"
+piker: "*p*k*r*"
+pikey: "*p*k*y*"
+piky: "*p*ky*"
+pindick: "*p*nd*ck*"
+pocha: "*p*ch**"
+pocho: "*p*ch**"
+pocketpool: "*p*ck*tp**l*"
+pocket pull: "*p*ck*t p*ll*"
+pohm: "*p*hm*"
+pom: "*p*m*"
+pommie: "*p*mm***"
+pommy: "*p*mmy*"
+poon: "*p**n*"
+poontang: "*p**nt*ng*"
+porchmonkey: "*p*rchm*nk*y*"
+pud: "*p*d*"
+pudboy: "*p*db*y*"
+pudd: "*p*dd*"
+puddboy: "*p*ddb*y*"
+puntang: "*p*nt*ng*"
+pussy_ass: "*p*ssy_*ss*"
+pussy-ass: "*p*ssy-*ss*"
+pussyeater: "*p*ssy**t*r*"
+pussyfucker: "*p*ssyf*ck*r*"
+pussylicker: "*p*ssyl*ck*r*"
+pussylips: "*p*ssyl*ps*"
+pussylover: "*p*ssyl*v*r*"
+pussypounder: "*p*ssyp**nd*r*"
+pusy: "*p*sy*"
+quashie: "*q**sh***"
+queef: "*q***f*"
+raghead: "*r*gh**d*"
+reestie: "*r**st***"
+rentafuck: "*r*nt*f*ck*"
+rimjob: "*r*mj*b*"
+roundeye: "*r**nd*y**"
+russki: "*r*ssk**"
+russkie: "*r*ssk***"
+sadis: "*s*d*s*"
+sadom: "*s*d*m*"
+sandnigger: "*s*ndn*gg*r*"
+shitface: "*sh*tf*c**"
+shitfuck: "*sh*tf*ck*"
+shitfucker: "*sh*tf*ck*r*"
+shitfull: "*sh*tf*ll*"
+shortfuck: "*sh*rtf*ck*"
+sixtynine: "*s*xtyn*n**"
+sixtyniner: "*s*xtyn*n*r*"
+skankbitch: "*sk*nkb*tch*"
+skankfuck: "*sk*nkf*ck*"
+skankybitch: "*sk*nkyb*tch*"
+skankywhore: "*sk*nkywh*r**"
+slopehead: "*sl*p*h**d*"
+slutting: "*sl*tt*ng*"
+slutwear: "*sl*tw**r*"
+slutwhore: "*sl*twh*r**"
+smackthemonkey: "*sm*ckth*m*nk*y*"
+snatch: "*sn*tch*"
+snatchpatch: "*sn*tchp*tch*"
+snigger: "*sn*gg*r*"
+sniggered: "*sn*gg*r*d*"
+sniggering: "*sn*gg*r*ng*"
+sniggers: "*sn*gg*rs*"
+snigger's: "*sn*gg*r's*"
+snowback: "*sn*wb*ck*"
+snownigger: "*sn*wn*gg*r*"
+sodomise: "*s*d*m*s**"
+sodomite: "*s*d*m*t**"
+sodomize: "*s*d*m*z**"
+sodomy: "*s*d*my*"
+sooty: "*s**ty*"
+spaghettinigger: "*sp*gh*tt*n*gg*r*"
+spankthemonkey: "*sp*nkth*m*nk*y*"
+spermhearder: "*sp*rmh**rd*r*"
+spermherder: "*sp*rmh*rd*r*"
+spic: "*sp*c*"
+spick: "*sp*ck*"
+spig: "*sp*g*"
+spigotty: "*sp*g*tty*"
+spik: "*sp*k*"
+splittail: "*spl*tt**l*"
+spooge: "*sp**g**"
+strapon: "*str*p*n*"
+stupidfuck: "*st*p*df*ck*"
+stupidfucker: "*st*p*df*ck*r*"
+suckcock: "*s*ckc*ck*"
+suck-cock: "*s*ck-c*ck*"
+suckdick: "*s*ckd*ck*"
+suckmyass: "*s*ckmy*ss*"
+suckmycock: "*s*ckmyc*ck*"
+suck-my-cock: "*s*ck-my-c*ck*"
+suckmydick: "*s*ckmyd*ck*"
+suckmytit: "*s*ckmyt*t*"
+taff: "*t*ff*"
+tang: "*t*ng*"
+tarbaby: "*t*rb*by*"
+tard: "*t*rd*"
+hicklips: "*h*ckl*ps*"
+timbernigger: "*t*mb*rn*gg*r*"
+titfuck: "*t*tf*ck*"
+titfucker: "*t*tf*ck*r*"
+titfuckin: "*t*tf*ck*n*"
+titjob: "*t*tj*b*"
+titlicker: "*t*tl*ck*r*"
+titlover: "*t*tl*v*r*"
+towelhead: "*t*w*lh**d*"
+trisexual: "*tr*s*x**l*"
+twat: "*tw*t*"
+twat: "*tw*t*"
+twats: "*tw*ts*"
+unfuckable: "**nf*ck*bl**"
+uptheass: "**pth**ss*"
+upthebutt: "**pth*b*tt*"
+wab: "*w*b*"
+whigger: "*wh*gg*r*"
+whitenigger: "*wh*t*n*gg*r*"
+whop: "*wh*p*"
+whorefucker: "*wh*r*f*ck*r*"
+wigger: "*w*gg*r*"
+wop: "*w*p*"
+zigabo: "*z*g*b**"
+zipperhead: "*z*pp*rh**d*"
