--- a/config/dictionary.yml
+++ b/config/dictionary.yml
@@ -122,7 +122,7 @@ headfuck: "*h**df*ck*"
 heeb: "*h**b*"
 hindoo: "*h*nd***"
 holestuffer: "*h*l*st*ff*r*"
-holocaust:  *h*l*c**st*
+holocaust: "*h*l*c**st*"
 hosejob: "*h*s*j*b*"
 hymie: "*hym***"
 iblowu: "**bl*w**"
@@ -188,7 +188,7 @@ motherfucking: "*m*th*rf*ck*ng*"
 mother-fucking: "*m*th*r-f*ck*ng*"
 motherfuckings: "*m*th*rf*ck*ngs*"
 mufflicker: "*m*ffl*ck*r*"
-muff licker: "*m*ff" l*ck*r*
+muff licker: "*m*ff l*ck*r*"
 mufflikcer: "*m*ffl*kc*r*"
 mulatto: "*m*l*tt**"
 muncher: "*m*nch*r*"
